<resources>
    <string name="app_name">MyFitPlan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acerca_de">Acerca de</string>
    <string name="acerca_de_texto">MYFitPlan es una aplicación para Android desarrollada con el propósito de facilitarle la rutina diaria a aquellas personas relacionadas con el mundo fitness, del deporte o de la actividad física en general.\n\n Con la opción de crear rutinas de entrenamiento con una gran variedad de ejercicios creados a medida por el usuario, este podrá decidir tanto el número de series que tendrá ese ejercicio, como el número de repeticiones e incluso el peso, para así contar con una mayor personalización a la hora de planificar los entrenamientos.\n\n La opción de crear rutinas de alimentación es similar a la anterior, con la diferencia de que aquí se crearán recetas o comidas, y cada una de ellas contará con un ingrediente principal y el peso que tendrá esa receta en gramos.\n\n Una característica muy importante de MyFitPlan es que tanto las rutinas de entrenamiento como las de alimentación pueden ser programadas como eventos en Google Calendar, pudiendo ponerles una fecha de inicio y final, y recibir una notificación al momento o un tiempo antes de que estas empiecen.\n\n Aparte de todas las características y opciones antes mencionadas, MyFitPlan cuenta con la opción de crear un perfil e introducir una foto a elección del usuario desde su galería, además de introducir otros datos como la fecha de nacimiento, altura y peso, entre otros.\n\n Con todo lo antes mencionado, MyFitPlan pretende hacerte la rutina un poco más fácil y verte mejorar y cumplir tus objetivos.\n\n MyFitPlan. Entrena, come, MEJORA.\n\n\n\n</string>
    <string name="acerca_de_myfitplan">Acerca de MyFitPlan.</string>
    <string name="ajustes">Ajustes</string>
    <string name="ajustes_de_myfitplan">Ajustes de MyFitPlan.</string>
    <string name="ajustes_perfil">Perfil</string>
    <string name="ajustes_ir_per_user">Ir al perfil de usuario</string>
    <string name="ajustes_bor_per_user">Borrar perfil de usuario</string>
    <string name="ajustes_rutinas">Rutinas</string>
    <string name="ajustes_bor_rut_ejer">Borrar todas las rutinas de ejercicio</string>
    <string name="ajustes_bor_rut_alim">Borrar todas las rutinas de alimentación</string>
    <string name="ajustes_bor_rutinas">Borrar todas las rutinas de ambas categorías</string>
    <string name="ajustes_base_de_datos">Base de datos</string>
    <string name="ajustes_bor_bd">Borrar toda la base de datos</string>
    <string name="ajustes_acerca_de">Acerca de</string>
    <string name="ajustes_acerca_de_mfp">Acerca de MyFitPlan</string>
    <string name="fa_rutalim">Rutinas de alimentación</string>
    <string name="fa_has_creado_x">Has creado x rutinas de alimentación.</string>
    <string name="fa_textview">TextView</string>
    <string name="fera_nombre_de_rutina">Nombre de rutina</string>
    <string name="fere_nombre_de_rutina">Nombre de rutina</string>
    <string name="fere_descripcion">Descripción</string>
    <string name="fera_descripcion">Descripción</string>
    <string name="fec_nombre_comida">Nombre comida</string>
    <string name="fec_ingrediente_principal">Ingrediente principal</string>
    <string name="fee_nombre_ejercicio">Nombre ejercicio</string>
    <string name="fee_series">Series</string>
    <string name="fee_repeticiones">Repeticiones</string>
    <string name="fee_peso_kg">Peso (kg)</string>
    <string name="fec_peso_kg">Peso (kg)</string>
    <string name="fep_editar_perfil">Editar perfil</string>
    <string name="fep_nombre">Nombre</string>
    <string name="fep_fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="fep_altura_cm">Altura (cm)</string>
    <string name="fep_peso_kg">Peso (Kg)</string>
    <string name="fep_grasa_corporal">Grasa corporal (%)</string>
    <string name="fep_estado_pon_lo_que_quieras">Estado (Pon lo que quieras)</string>
    <string name="fe_rutinas_de_entrenamiento">Rutinas de entrenamiento</string>
    <string name="fe_has_creado_x">Has creado x rutinas de entrenamiento.</string>
    <string name="fe_textview">TextView</string>
    <string name="fnc_nueva_comida">Nueva comida</string>
    <string name="fnc_nombre_de_la_comida">Nombre de la comida</string>
    <string name="fnc_ingrediente_principal">Ingrediente principal</string>
    <string name="fnc_peso_gramos">Peso (gramos)</string>
    <string name="fnc_guardar_y_volver">GUARDAR Y VOLVER</string>
    <string name="fnc_guardar_y_nuevo">GUARDAR Y NUEVO</string>
    <string name="fnra_nueva_rutina_de_alimentaci_n">Nueva rutina de alimentación</string>
    <string name="fnra_nombre_de_la_rutina">Nombre de la rutina</string>
    <string name="fnra_descripcion">Descripción</string>
    <string name="fnre_nueva_rutina_de_entrenamiento">Nueva rutina de entrenamiento</string>
    <string name="fnre_nombre_de_la_rutina">Nombre de la rutina</string>
    <string name="fnre_descripcion">Descripción</string>
    <string name="fne_nuevo_ejercicio">Nuevo ejercicio</string>
    <string name="fne_nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="fne_series">Series</string>
    <string name="fne_repeticiones">Repeticiones</string>
    <string name="fne_peso_kg">Peso (kg)</string>
    <string name="fne_guardar_y_volver">GUARDAR Y VOLVER</string>
    <string name="fne_guardar_y_nuevo">GUARDAR Y NUEVO</string>
    <string name="fp_perfil">Perfil</string>
    <string name="fp_username">Username</string>
    <string name="fp_editar_perfil">EDITAR PERFIL</string>
    <string name="fp_estado">Estado</string>
    <string name="fp_fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="fp_altura">Altura</string>
    <string name="fp_peso">Peso</string>
    <string name="fp_grasa_corporal">Grasa corporal</string>
    <string name="fp_cm">cm</string>
    <string name="fp_kg">Kg</string>
    <string name="fp_porcentaje">%</string>
    <string name="fra_nombre_de_rutina">Nombre de rutina</string>
    <string name="fra_descripcion">Descripción escrita para esta rutina.</string>
    <string name="fra_esta_rutina_tiene_x">Esta rutina tiene 0 ejercicios.</string>
    <string name="fre_nombre_de_rutina">Nombre de rutina</string>
    <string name="fre_descripci_n_escrita_para_esta_rutina">Descripción escrita para esta rutina.</string>
    <string name="fre_esta_rutina_tiene_x">Esta rutina tiene 0 ejercicios.</string>
    <string name="lec_nombre_de_la_comida">Nombre de la comida</string>
    <string name="lec_ingrediente_principal">INGREDIENTE PRINCIPAL:</string>
    <string name="lec_ninguno">ninguno</string>
    <string name="lec_peso_g">PESO(g):</string>
    <string name="lec_0">0</string>
    <string name="lee_nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="lee_series">SERIES:</string>
    <string name="lee_0">0</string>
    <string name="lee_reps">REPS:</string>
    <string name="lee_peso_kg">PESO(kg):</string>
    <string name="lera_nombre_de_la_comida">Nombre de la comida</string>
    <string name="lera_descripcion">descripción</string>
    <string name="lere_nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="lere_descripcion">descripción</string>
</resources>